# meat-curing-chamber

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  WORKSPACE  config.ini
.github/workflows/: main.yml
cmake/in/: cxxopts.in  paho_mqtt_c.in  paho_mqtt_cpp.in  rc_switch.in  spdlog.in
config/: bedroom.ini  fridge.ini  living_room.ini
doc/: 433_codes.txt  design.md  mqtt_topics.txt  zero_gpio.txt
docker/miot-build-ubuntu/: Dockerfile
scripts/: build_cpp.sh  build_docker_build_image.sh  format_cpp.sh  format_python.sh  install_paho_mqtt_c.sh  install_paho_mqtt_cpp.sh  install_spdlog.sh  install_wiringpi.sh
